<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="about_app_fragment">About App Fragment</string>
    <string name="name">Name</string>
    <string name="name_profile">Name: Prasad Ranjane</string>
    <string name="contact_no_profile">Contact No: 9137860917</string>
    <string name="email_id_profile">Email ID: prasadranjane2304@gmail.com</string>
    <string name="profile_heading">PROFILE</string>
    <string name="address_profile">Address: B/04-Gorai Vandana CHSL, Gorai-1, Borivali(W), Mumbai-400091.</string>
    <string name="list_item">List Item</string>
    <string name="name_of_the_author">Name of the author</string>
    <string name="name_of_the_book">Name Of the Book</string>
    <string name="price_of_book">Price Of Book</string>
    <string name="_4_5">4.5</string>
    <string name="check_connectivity">Check Connectivity</string>
    <string name="check_internet">Check Internet</string>
    <string name="about_the_book">About the Book:</string>
    <string name="hello_blank_fragment1">Hello Blank Fragment</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="hello_world">Hello World</string>
    <string name="android_inc">Android Inc.</string>
    <string name="rs_499">Rs.499</string>
    <string name="_4_5rating">4.5</string>
    <string name="action_sort">Sort</string>
</resources>