<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:background="#ffffff"
    android:layout_margin="6dp"
    app:cardCornerRadius="4dp">
<LinearLayout
    android:id="@+id/llContent"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:orientation="horizontal"
    android:background="#ffffff"
    android:weightSum="6">

    <ImageView
        android:id="@+id/imgBookImage"
        android:layout_weight="1.5"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:src="@mipmap/ic_launcher"
        android:padding="5dp"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:layout_weight="3.3"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txtBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_of_the_book"
            android:padding="8dp"
            android:textSize="18sp"
            android:textColor="@color/purple_500"/>

        <TextView
            android:id="@+id/txtBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtBookName"
            android:text="@string/name_of_the_author"
            android:padding="8dp"
            android:textSize="15sp"
            android:textColor="#03a9f4" />

        <TextView
            android:id="@+id/txtBookPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/price_of_book"
            android:padding="8dp"
            android:layout_below="@id/txtBookAuthor"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#357a38"/>
    </RelativeLayout>

        <TextView
            android:id="@+id/txtBookRating"
            android:layout_weight="1.2"
            android:layout_width="0dp"
            android:padding="4dp"
            android:layout_height="wrap_content"
            android:textColor="#ffca28"
            android:text="@string/_4_5"
            android:drawablePadding="4dp"
            android:textSize="15sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_ratings">

    </TextView>

</LinearLayout>
</androidx.cardview.widget.CardView>